# IntroGrafica

./: DocumentoDiseño.docx  LibDraw.cxx  README.md  main.cxx
1_Entrega/: CMakeLists.txt  main.cxx
2_Entrega/: CMakeLists.txt  main.cxx
2_Entrega/include/: track_lab.h
2_Entrega/src/: main.cxx  track_lab.cxx
3_Entrega/: CMakeLists.txt
3_Entrega/include/: track_lab.h
3_Entrega/src/: main.cxx  track_lab.cxx
